// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`copy for person where district=DISTRICT 5 and group=ELIGIBLE_MISSING_FINES_AND_FEES 1`] = `
"Hi Jane, IDOC records show you meet most requirements but have a remaining step to be considered for the Limited Supervision Unit (LSU). If you make fine/fee payments for 3 months in a row (even small payments count), you may qualify.

LSU is a lower level of supervision with monthly online check-ins for those in good standing (for example, no active no-contact orders, and no new misdemeanors). It reduces your monthly supervision fee from $60 to $40. LSU is optional, and this message does not mean you have already been transferred.

You can reach out to John Doe or a specialist at D5general@idoc.idaho.gov or 208-644-7268 to make payments or with questions about LSU. They must verify that you are in compliance with your conditions of supervision. If you are, they can help you apply.

Learn more at rviz.co/id_lsu.

Reply STOP to stop receiving these messages at any time. We’re unable to respond to messages sent to this number."
`;

exports[`copy for person where district=District 1 and group=FULLY_ELIGIBLE 1`] = `
"Hi Jane, IDOC records show that you have met most of the requirements to be considered for the Limited Supervision Unit (LSU). LSU is a lower level of supervision with monthly online check-ins for those in good standing (for example, no new misdemeanors).

This message does not mean that you have already been transferred to LSU. To fully qualify, your PO will need to check that:
1. You have no active no-contact orders.
2. You have made payments towards your fines/fees at least 3 months in a row (even small payments count).

You may also be required to provide your PO with a negative urine analysis test.

If you believe you meet these conditions or have questions, please contact John Doe or email D1Connect@idoc.idaho.gov; they can confirm your eligibility and help you apply. Approval for LSU is not guaranteed.

Learn more at rviz.co/id_lsu.

Reply STOP to stop receiving these messages at any time. We’re unable to respond to messages sent to this number."
`;

exports[`copy for person where district=District 2 and group=MISSING_INCOME_VERIFICATION 1`] = `
"Hi Jane, IDOC records show you may soon be eligible to apply for the Limited Supervision Unit (LSU), a lower level of supervision for those meeting all their required conditions. This message does not mean you are already eligible.

LSU is optional but offers benefits like monthly online check-ins and reduced supervision fees ($40 vs. $60/month).

To qualify, you’ll need to provide your PO with documents like pay-stubs proving you have full-time employment, are a student, or other income sources like a pension.

You must also have paid towards your fines/fees at least 3 months in a row (even small payments count).

If interested, contact John Doe or contact a specialist at district2Admin@idoc.idaho.gov. They must first confirm your eligibility, then can help you apply.

See all requirements at rviz.co/id_lsu.

Reply STOP to stop receiving these messages at any time. We’re unable to respond to messages sent to this number."
`;

exports[`copy for person where district=District 7 and group=MISSING_INCOME_VERIFICATION 1`] = `
"Hi Jane, IDOC records show you may soon be eligible to apply for the Limited Supervision Unit (LSU), a lower level of supervision for those meeting all their required conditions. This message does not mean you are already eligible.

LSU is optional but offers benefits like monthly online check-ins and reduced supervision fees ($40 vs. $60/month).

To qualify, you’ll need to provide your PO with documents like pay-stubs proving you have full-time employment, are a student, or other income sources like a pension.

You must also have paid towards your fines/fees at least 3 months in a row (even small payments count).

If interested, contact John Doe or a specialist at d7.pp.specialist@idoc.idaho.gov or (208) 701-7130. They must first confirm your eligibility, then can help you apply.

See all requirements at rviz.co/id_lsu.

Reply STOP to stop receiving these messages at any time. We’re unable to respond to messages sent to this number."
`;

exports[`copy for person where district=district 3 and group=MISSING_DA 1`] = `
"Hi Jane, IDOC records show you may soon be eligible to apply for the Limited Supervision Unit (LSU), a lower level of supervision for those meeting all their required conditions. This message does not mean you are already eligible.

LSU is optional but offers benefits like monthly online check-ins and reduced supervision fees ($40 instead of $60/month).

To qualify, you’ll need to provide your PO with a negative urine analysis test.

Additionally, you must have paid towards your fines/fees at least 3 months in a row (even small payments count).

If interested, contact John Doe or a specialist at specialistsd3@idoc.idaho.gov or (208) 454-7601. They must verify that you are in compliance with your conditions of supervision. If you are, they can help you apply.

See all requirements at rviz.co/id_lsu.

Reply STOP to stop receiving these messages at any time. We’re unable to respond to messages sent to this number."
`;

exports[`copy for person where district=district 4 and group=TWO_MISSING_CRITERIA 1`] = `
"Hi Jane, IDOC records show you may soon be eligible to apply for the Limited Supervision Unit (LSU), a lower level of supervision for those meeting all their required conditions.

LSU is optional but offers benefits like monthly online check-ins and reduced supervision fees ($40 instead of $60/month).

To qualify, you’ll need to provide your PO with:
1. Documents like pay-stubs proving you have full-time employment, are a student, or other income sources like a pension, and
2. A negative urine analysis test.

Additionally, you must have paid towards your fines/fees at least 3 months in a row (even small payments count).

If interested, contact John Doe or a specialist at d4ppspecialists@idoc.idaho.gov or 208-327-7008. They must first confirm your eligibility, then can help you apply.

See all requirements at rviz.co/id_lsu.

Reply STOP to stop receiving these messages at any time. We’re unable to respond to messages sent to this number."
`;
